--- a/villa-istria/public/assets/scss/_variables.scss
+++ b/villa-istria/public/assets/scss/_variables.scss
@@ -1,11 +1,37 @@
-$body-fonts: 'Roboto', sans-serif;
-$icon-font: "Font Awesome 5 Pro";
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat/Montserrat-ExtraLight.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "CinzelDecorative";
+  src: url("../fonts/Cinzel_Decorative/CinzelDecorative-Regular.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+$body-fonts: "Montserrat", "Roboto", sans-serif;
+$icon-font: "CinzelDecorative", "Font Awesome 5 Pro";
+
+// $body-fz: 14px;
+// $body-color: #777a7e;
+// $heading-color: #242629;
+// $theme-color: #ff4040;
+// $white-color: #fff;
+// $grey-color: #f2f3f5;
+// $border-color: #e9ebed;
+
+// design colors
+$base-blue: #1a3950;
+$base-brown: #ebddc7;
 
 $body-fz: 14px;
 $body-color: #777a7e;
-$heading-color: #242629;
+$heading-color: $base-brown;
 $theme-color: #ff4040;
 $white-color: #fff;
 $grey-color: #f2f3f5;
-$border-color: #e9ebed; 
-
+$border-color: #e9ebed;
