--- a/villa-istria/public/assets/scss/_contact.scss
+++ b/villa-istria/public/assets/scss/_contact.scss
@@ -11,8 +11,8 @@
   &:hover {
     & .contact-info-icon {
       & a {
-        background-color: $theme-color;
-        color: $white-color;
+        background-color: $white-color;
+        color: $base-blue;
       }
     }
   }
@@ -25,17 +25,16 @@
   & a {
     height: 65px;
     width: 65px;
-    background: $grey-color;
     display: inline-block;
     line-height: 65px;
     text-align: center;
     border-radius: 50%;
     font-size: 20px;
-    color: $theme-color;
+    color: $base-brown;
     @include transition(0.3s);
     &:hover {
-      background-color: #222;
-      color: $white-color;
+      background-color: $base-blue;
+      color: $base-blue;
     }
   }
 }
