--- a/villa-istria/public/assets/scss/_default.scss
+++ b/villa-istria/public/assets/scss/_default.scss
@@ -62,6 +62,12 @@ textarea:focus,
   outline: 0;
   box-shadow: none;
 }
+html {
+  height: 100%;
+}
+body {
+  min-height: 100% !important;
+}
 
 .form-control:focus {
   color: $heading-color;
